--- a/proxmox.conf
+++ b/proxmox.conf
@@ -1,20 +1,29 @@
+upstream proxmox {
+    server "nome-scelto-server";
+}
+ 
+server {
+    listen 80 default_server;
+    rewrite ^(.*) https://$host$1 permanent;
+}
+ 
 server {
     listen 443;
-    server_name (dominio scelto);
-
+    server_name _;
     ssl on;
-    ssl_certificate /etc/letsencrypt/live/dominioscelto/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/dominioscelto/privkey.pem;
-
+    ssl_certificate /posizione-certificato-fullkey.pem;
+    ssl_certificate_key /posizione-certificato-chiave.pem;
     proxy_redirect off;
     location / {
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_pass https://ip-proxmox:8006;
-
-        # Enable websockets for the noVNC console to work
         proxy_http_version 1.1;
-        proxy_set_header Connection $http_connection;
-        proxy_set_header Origin http://$host;
         proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade"; 
+        proxy_pass https://ip-server:8006;
+	proxy_buffering off;
+	client_max_body_size 0;
+	proxy_connect_timeout  3600s;
+        proxy_read_timeout  3600s;
+        proxy_send_timeout  3600s;
+        send_timeout  3600s;
     }
 }
