--- a/proxmox.conf
+++ b/proxmox.conf
@@ -25,7 +25,7 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_pass http://10.0.1.17:8124;
+        proxy_pass http://ip:port;
         proxy_set_header Host $host;
         proxy_redirect http:// https://;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
