--- a/proxmox.conf
+++ b/proxmox.conf
@@ -12,8 +12,8 @@ server {
     server_name _;
     add_header Strict-Transport-Security "max-age=31536000;includeSubdomains";
     ssl on;
-    ssl_certificate  /etc/letsencrypt/live/giancarlo-home.duckdns.org/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/giancarlo-home.duckdns.org/privkey.pem;
+    ssl_certificate  /etc/letsencrypt/live/nome-scelto-server/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/nome-scelto-server/privkey.pem;
     ssl_session_timeout 5m;
     ssl_protocols SSLv2 SSLv3 TLSv1;
     ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
