--- a/proxmox.conf
+++ b/proxmox.conf
@@ -1,5 +1,5 @@
 upstream proxmox {
-    server "nome-scelto-server";
+    server "FQDN HOSTNAME";
 }
  
 server {
@@ -10,28 +10,15 @@ server {
 server {
     listen 443;
     server_name _;
-    add_header Strict-Transport-Security "max-age=31536000;includeSubdomains";
     ssl on;
-    ssl_certificate  /etc/letsencrypt/live/nome-scelto-server/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/nome-scelto-server/privkey.pem;
-    ssl_session_timeout 5m;
-    ssl_protocols SSLv2 SSLv3 TLSv1;
-    ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    proxy_buffering off;
+    ssl_certificate /etc/pve/local/pve-ssl.pem;
+    ssl_certificate_key /etc/pve/local/pve-ssl.key;
+    proxy_redirect off;
     location / {
-        rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass http://ip:port;
-        proxy_set_header Host $host;
-        proxy_redirect http:// https://;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header Connection "upgrade"; 
+        proxy_pass https://localhost:8006;
 	proxy_buffering off;
 	client_max_body_size 0;
 	proxy_connect_timeout  3600s;
