--- a/hass.conf
+++ b/hass.conf
@@ -1,3 +1,13 @@
+server {
+    listen 443 ssl http2;
+    server_name _;
+    add_header Strict-Transport-Security "max-age=31536000;includeSubdomains";
+    ssl on;
+    ssl_certificate  /etc/letsencrypt/live/nome-scelto-server/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/nome-scelto-server/privkey.pem;
+    ssl_session_timeout 5m;
+    ssl_protocols SSLv2 SSLv3 TLSv1;
+    
     location / {
         rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
