--- a/hass.conf
+++ b/hass.conf
@@ -8,6 +8,9 @@ server {
     ssl_session_timeout 5m;
     ssl_protocols SSLv2 SSLv3 TLSv1;
     
+    ssl_prefer_server_ciphers on;
+    ssl_session_cache shared:SSL:10m;
+    proxy_buffering off;
     location / {
         rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
