--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -27,7 +27,7 @@ server {
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header 
+        proxy_set_header X-Forwarded-Proto $scheme;
      	proxy_connect_timeout  3600s;
         proxy_read_timeout  3600s;
         proxy_send_timeout  3600s;
