--- a/hass.conf
+++ b/hass.conf
@@ -1,12 +1,14 @@
 server {
     listen 443 ssl http2;
-    server_name _;
+    server_name nome-scelto;
     add_header Strict-Transport-Security "max-age=31536000;includeSubdomains";
     ssl on;
-    ssl_certificate  /etc/letsencrypt/live/nome-scelto-server/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/nome-scelto-server/privkey.pem;
+    ssl_certificate  /etc/letsencrypt/live/nome-scelto/fullchain.pem;
+    ssl_certificate_key  /etc/letsencrypt/live/nome-scelto/privkey.pem;
     ssl_session_timeout 5m;
     ssl_protocols SSLv2 SSLv3 TLSv1;
+    
+    ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:AES256+EDH';
     
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
