--- a/hass.conf
+++ b/hass.conf
@@ -1,5 +1,5 @@
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
     server_name nome-scelto;
     add_header Strict-Transport-Security "max-age=31536000;includeSubdomains";
     ssl on;
