--- a/hass.conf
+++ b/hass.conf
@@ -6,7 +6,7 @@ server {
     ssl_certificate  /etc/letsencrypt/live/nome-scelto/fullchain.pem;
     ssl_certificate_key  /etc/letsencrypt/live/nome-scelto/privkey.pem;
     ssl_session_timeout 5m;
-    ssl_protocols SSLv2 SSLv3 TLSv1;
+    ssl_protocols SSLv2 SSLv3 TLSv1 TLSv1.2 TLSv1.1;
     
     ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:AES256+EDH';
     
