--- a/hass.conf
+++ b/hass.conf
@@ -10,6 +10,8 @@ server {
     
     ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:AES256+EDH';
     
+    ssl_ciphers 'EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:EECDH+aRSA+SHA384:EECDH+aRSA+SHA256:EECDH:EDH+aRSA:!aNULL:!eNULL:!LOW:!RC4:!3DES:!MD5:!EXP:!PSK:!SRP:!SEED:!DSS:!CAMELLIA';
+    
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
     proxy_buffering off;
