--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -1,28 +1,34 @@
+map $http_upgrade $connection_upgrade {
+    ''                      'close';
+    default                 'upgrade';
+}
+
 server {
-    listen 443 ssl http2;
+    listen 443 ssl;
     server_name _;
-    add_header Strict-Transport-Security "max-age=31536000;includeSubdomains";
+    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
     ssl on;
     ssl_certificate  /etc/letsencrypt/live/nome-scelto-server/fullchain.pem;
     ssl_certificate_key  /etc/letsencrypt/live/nome-scelto-server/privkey.pem;
-    ssl_session_timeout 5m;
-    ssl_protocols SSLv2 SSLv3 TLSv1;
-    
-    ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:AES256+EDH';
-    
-    ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
-    
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:!aNULL:!eNULL:!EXP$
     ssl_prefer_server_ciphers on;
     ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 5m;
     proxy_buffering off;
+   
+    #ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:AES256+EDH';
+    
+    #ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+    
     location / {
         rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass http://ip:port;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_pass http://ip:port/;
         proxy_set_header Host $host;
-        proxy_redirect http://ip:port //;
+        proxy_redirect http://ip:port/ /;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
@@ -40,15 +46,15 @@ server {
         rewrite /nome-destinanzione/(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass http://ip:port;
+        proxy_set_header Connection $connection_upgrade
+        proxy_pass http://ip:port/;
         proxy_set_header Host $host;
-        proxy_redirect http://ip:port //;
+        proxy_redirect http://ip:port/ /;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header 
+        proxy_set_header X-Forwarded-Proto $scheme;
      	proxy_connect_timeout  3600s;
         proxy_read_timeout  3600s;
         proxy_send_timeout  3600s;
