--- a/proxmox.conf
+++ b/proxmox.conf
@@ -3,25 +3,36 @@ upstream proxmox {
 }
  
 server {
+    listen [::]:80;
     listen 80 default_server;
-    rewrite ^(.*) https://$host$1 permanent;
+    server_name (mettere nome);
+    rewrite ^ https://$host$request_uri? permanent;
+
 }
- 
+
 server {
-    listen 443;
-    server_name _;
-    ssl on;
-    ssl_certificate /etc/pve/local/pve-ssl.pem;
-    ssl_certificate_key /etc/pve/local/pve-ssl.key;
-    proxy_redirect off;
+    listen [::]:443 default_server ssl http2;
+    listen      443 default_server ssl http2;
+    server_name (mettere nome);
+    ssl_certificate /etc/letsencrypt/live/(mettere nome dominio)/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/(mettere nome dominio/privkey.pem;
+    ssl_protocols TLSv1.3 TLSv1.2 TLSv1.1 TLSv1;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$
+    ssl_session_cache shared:TLS:2m;
+    ssl_buffer_size 4k;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001]; # Cloudflare
+    add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload' always;
     location / {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade"; 
-        proxy_pass https://localhost:8006;
-	proxy_buffering off;
-	client_max_body_size 0;
-	proxy_connect_timeout  3600s;
+        proxy_set_header Connection "upgrade";
+        proxy_pass https://10.0.1.5:8006;
+        proxy_buffering off;
+        client_max_body_size 0;
+        proxy_connect_timeout  3600s;
         proxy_read_timeout  3600s;
         proxy_send_timeout  3600s;
         send_timeout  3600s;
