--- a/proxmox.conf
+++ b/proxmox.conf
@@ -1,11 +1,11 @@
 upstream proxmox {
-    server "FQDN HOSTNAME";
+    server "mettere nome dominio";
 }
  
 server {
     listen [::]:80;
     listen 80 default_server;
-    server_name (mettere nome);
+    server_name #mettere nome dominio;
     rewrite ^ https://$host$request_uri? permanent;
 
 }
@@ -13,12 +13,12 @@ server {
 server {
     listen [::]:443 default_server ssl http2;
     listen      443 default_server ssl http2;
-    server_name (mettere nome);
-    ssl_certificate /etc/letsencrypt/live/(mettere nome dominio)/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/(mettere nome dominio/privkey.pem;
+    server_name #mettere nome dominio;
+    ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
     ssl_protocols TLSv1.3 TLSv1.2 TLSv1.1 TLSv1;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$
+    ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
     ssl_session_cache shared:TLS:2m;
     ssl_buffer_size 4k;
     ssl_stapling on;
