--- a/proxmox.conf
+++ b/proxmox.conf
@@ -16,7 +16,7 @@ server {
     server_name #mettere nome dominio;
     ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
-    ssl_protocols TLSv1.3 TLSv1.2 TLSv1.1 TLSv1;
+    ssl_protocols TLSv1.3 TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
     ssl_session_cache shared:TLS:2m;
