--- a/proxmox.conf
+++ b/proxmox.conf
@@ -4,15 +4,15 @@ upstream proxmox {
  
 server {
     listen [::]:80;
-    listen 80 default_server;
+    listen 80;
     server_name #mettere nome dominio;
     rewrite ^ https://$host$request_uri? permanent;
 
 }
 
 server {
-    listen [::]:443 default_server ssl http2;
-    listen      443 default_server ssl http2;
+    listen [::]:443 ssl http2;
+    listen      443 ssl http2;
     server_name #mettere nome dominio;
     ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
@@ -20,11 +20,17 @@ server {
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
     ssl_session_cache shared:TLS:2m;
+    
+    ssl_session_cache shared:SSL:10m;
+    
     ssl_buffer_size 4k;
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001]; # Cloudflare
     add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload' always;
+   
+    proxy_redirect off;
+    
     location / {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
