--- a/proxmox.conf
+++ b/proxmox.conf
@@ -16,54 +16,30 @@ server {
     server_name #mettere nome dominio;
     ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
     ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
-    ssl_protocols TLSv1.3 TLSv1.2;
+    ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
-    ssl_session_cache shared:TLS:2m;
-    
-    ssl_session_cache shared:SSL:10m;
-    
+    ssl_session_cache shared:TLS:2m;  
     ssl_buffer_size 4k;
     ssl_stapling on;
     ssl_stapling_verify on;
-    resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001]; # Cloudflare
-    add_header Strict-Transport-Security 'max-age=31536000; includeSubDomains; preload' always;
-   
-    proxy_redirect off;
-    
+    resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001] valid=300s; # Cloudflare
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     location / {
         rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
         proxy_pass https://10.0.1.5:8006;
-        proxy_buffering off;
-        client_max_body_size 0;
         proxy_set_header Host $host;
-        proxy_set_header Origin http://$host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Real-IP $remote_addr;     
         proxy_set_header X-Forwarded-Proto https;
         proxy_connect_timeout  3600s;
         proxy_read_timeout  3600s;
         proxy_send_timeout  3600s;
         send_timeout  3600s;
     }
-}
-   
-   
-    location / {
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass https://10.0.1.5:8006;
-        proxy_buffering off;
-        client_max_body_size 0;
-        proxy_connect_timeout  3600s;
-        proxy_read_timeout  3600s;
-        proxy_send_timeout  3600s;
-        send_timeout  3600s;
-    }
-}
+}    
