--- a/hass.conf
+++ b/hass.conf
@@ -3,11 +3,30 @@ map $http_upgrade $connection_upgrade {
     default                 'upgrade';
 }
     
- 
- 
- 
- 
- 
+server {
+    listen [::]:80;
+    listen 80;
+    server_name #mettere nome dominio;
+    rewrite ^ https://$host$request_uri? permanent;
+
+}
+
+server {
+    listen [::]:443 ssl http2;
+    listen      443 ssl http2;
+    server_name #mettere nome dominio;
+    ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
+    ssl_session_cache shared:TLS:2m;  
+    ssl_buffer_size 4k;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001] valid=300s; # Cloudflare
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; 
+  
     location / {
         rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
