--- a/hass.conf
+++ b/hass.conf
@@ -27,27 +27,26 @@ server {
     resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001] valid=300s; # Cloudflare
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; 
   
-    location / {
+       location / {
         rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_pass http://ip:port/;
+        proxy_set_header Connection "upgrade";
+        proxy_pass http://10.0.1.17:8123/;
         proxy_set_header Host $host;
-        proxy_redirect http://ip:port/ /;
+        proxy_redirect ws://10.0.1.17/api/websocket /api/websocket;
+        proxy_redirect http://10.0.1.17:8123/ /;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-     	proxy_connect_timeout  3600s;
+        proxy_connect_timeout  3600s;
         proxy_read_timeout  3600s;
         proxy_send_timeout  3600s;
         send_timeout  3600s;
-    }
-#################################################################################
-# aggiungere solo se volete con un unico indirizzo raggiungere più destinazioni #
-#################################################################################
+     }
+}
     location /nome-destinazione {
         rewrite /nome-destinanzione/(.*) /$1 break;
         proxy_http_version 1.1;
