--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -4,22 +4,20 @@ map $http_upgrade $connection_upgrade {
 }
 
 server {
-    listen 443 ssl;
-    server_name _;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubdomains";
-    ssl on;
-    ssl_certificate  /etc/letsencrypt/live/nome-scelto-server/fullchain.pem;
-    ssl_certificate_key  /etc/letsencrypt/live/nome-scelto-server/privkey.pem;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH:!aNULL:!eNULL:!EXP$
+    listen [::]:443 ssl http2;
+    listen      443 ssl http2;
+    server_name #mettere nome dominio;
+    ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
+    ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 5m;
-    proxy_buffering off;
-   
-    #ssl_ciphers 'ECDHE-RSA-AES128-GCM-SHA256:AES256+EECDH:AES256+EDH';
-    
-    #ssl_ciphers ALL:!ADH:!EXPORT56:RC4+RSA:+HIGH:+MEDIUM:+LOW:+SSLv2:+EXP;
+    ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
+    ssl_session_cache shared:TLS:2m;  
+    ssl_buffer_size 4k;
+    ssl_stapling on;
+    ssl_stapling_verify on;
+    resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001] valid=300s; # Cloudflare
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     
     location / {
         rewrite /(.*) /$1 break;
