--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -1,6 +1,9 @@
-map $http_upgrade $connection_upgrade {
-    ''                      'close';
-    default                 'upgrade';
+server {
+    listen [::]:80;
+    listen 80;
+    server_name #mettere nome dominio;
+    rewrite ^ https://$host$request_uri? permanent;
+
 }
 
 server {
@@ -17,28 +20,30 @@ server {
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001] valid=300s; # Cloudflare
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
-    
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; 
+  
     location / {
         rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
-        proxy_pass http://ip:port/;
+        proxy_set_header Connection "upgrade";
+        proxy_pass http://ip:8123/;
         proxy_set_header Host $host;
-        proxy_redirect http://ip:port/ /;
+        proxy_redirect ws://ip/api/websocket /api/websocket;
+        proxy_redirect http://ip:8123/ /;
+        proxy_redirect http://ip:8123/api/ /api/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-     	proxy_connect_timeout  3600s;
+        proxy_connect_timeout  3600s;
         proxy_read_timeout  3600s;
         proxy_send_timeout  3600s;
         send_timeout  3600s;
     }
 #################################################################################
-# aggiungere solo se volete con un unico indirizzo raggiungere più destinazioni #
+# aggiungere per ogni destinazione che volete raggiungere con un solo indirizzo #
 #################################################################################
     location /nome-destinazione {
         rewrite /nome-destinanzione/(.*) /$1 break;
@@ -58,6 +63,8 @@ server {
         proxy_send_timeout  3600s;
         send_timeout  3600s;
     }
+#################################################################################
+# ripetere per ogni destinazione che volete raggiungere con un solo indirizzo   #
 #################################################################################
 }
 
