--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -1,3 +1,9 @@
+map $http_upgrade $connection_upgrade {
+    ''                      'close';
+    default                 'upgrade';
+}
+
+
 server {
     listen [::]:80;
     listen 80;
