--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -55,7 +55,7 @@ server {
         rewrite /nome-destinanzione/(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade
+        proxy_set_header Connection $connection_upgrade;
         proxy_pass http://ip:port/;
         proxy_set_header Host $host;
         proxy_redirect http://ip:port/ /;
@@ -73,5 +73,3 @@ server {
 # ripetere per ogni destinazione che volete raggiungere con un solo indirizzo   #
 #################################################################################
 }
-
-  
