--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -51,14 +51,13 @@ server {
 #################################################################################
 # aggiungere per ogni destinazione che volete raggiungere con un solo indirizzo #
 #################################################################################
-    location /nome-destinazione {
+    location /nome-destinazione/ {
         rewrite /nome-destinanzione/(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
         proxy_pass http://ip:port/;
         proxy_set_header Host $host;
-        proxy_redirect http://ip:port/ /;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
