--- a/proxmox.conf
+++ b/proxmox.conf
@@ -24,6 +24,7 @@ server {
     ssl_stapling on;
     ssl_stapling_verify on;
     resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
     location / {
         rewrite /(.*) /$1 break;
