--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -25,7 +25,8 @@ server {
     ssl_buffer_size 4k;
     ssl_stapling on;
     ssl_stapling_verify on;
-    resolver 1.1.1.1 1.0.0.1 [2606:4700:4700::1111] [2606:4700:4700::1001] valid=300s; # Cloudflare
+    resolver 8.8.8.8 8.8.4.4 valid=300s;
+    resolver_timeout 5s;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; 
   
     location / {
