--- a/proxmox.conf
+++ b/proxmox.conf
@@ -31,7 +31,7 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_pass https://10.0.1.5:8006;
+        proxy_pass https://ip-proxmox:8006;
         proxy_set_header Host $host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
