--- a/proxmox.conf
+++ b/proxmox.conf
@@ -1,6 +1,11 @@
 upstream proxmox {
     server "mettere nome dominio";
 }
+
+map $http_upgrade $connection_upgrade {
+    ''                      'close';
+    default                 'upgrade';
+}
  
 server {
     listen [::]:80;
