--- a/samba_hass.conf
+++ b/samba_hass.conf
@@ -1,8 +1,8 @@
  [hass]
    comment = config
    path = /root/docker/hass
-   valid users = root
-   force group = root
+   valid users = nome-utente
+   force group = gruppo-utente
    create mask = 0660
    directory mask = 0771
    writable = yes
