--- a/samba_hass.conf
+++ b/samba_hass.conf
@@ -1,6 +1,6 @@
  [hass]
    comment = config
-   path = /root/docker/hass
+   path = /root/docker
    valid users = nome-utente
    force group = gruppo-utente
    create mask = 0660
