--- a/hass.conf
+++ b/hass.conf
@@ -1,3 +1,7 @@
+upstream hass {
+    server #mettere nome dominio;
+}
+
 map $http_upgrade $connection_upgrade {
     ''                      'close';
     default                 'upgrade';
@@ -35,7 +39,7 @@ server {
         proxy_set_header Connection "upgrade";
         proxy_pass http://ip:8123/;
         proxy_set_header Host $host;
-        proxy_redirect ws://ip/api/websocket /api/websocket;
+        proxy_redirect ws://ip:8123/api/websocket /api/websocket;
         proxy_redirect http://ip:8123/ /;
         proxy_redirect http://ip:8123/api/ /api/;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
