--- a/proxmox_apache.conf
+++ b/proxmox_apache.conf
@@ -14,7 +14,7 @@
         SSLProxyCheckPeerCN off
         SSLProxyCheckPeerName off
         SSLCipherSUite "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256"
-        SSLProtocol -all +TLSv1.2 +TLSv1.3
+        SSLProtocol TLSv1.2 TLSv1.3
         SSLCompression off
         SSLUseStapling          on
         SSLStaplingResponderTimeout 5
