--- a/hass_apache.conf
+++ b/hass_apache.conf
@@ -1,19 +1,19 @@
 <VirtualHost *:80>
-    ServerName 
-    Redirect / https://nome_scelto.dominio.it/
+    ServerName #nome-dominio
+    Redirect / https://#nome-dominio/
 </VirtualHost>
 
 <VirtualHost *:443>
-  ServerName nome_scelto.dominio.it
+  ServerName #nome-dominio
   ProxyPreserveHost On
   ProxyRequests off
-  ProxyPass /api/websocket ws://192.168.x.x:8123/api/websocket
-  ProxyPassReverse /api/websocket ws://192.168.x.x:8123/api/w$
-  ProxyPass / http://192.168.x.x:8123/
-  ProxyPassReverse / http://192.168.x.x:8123/
+  ProxyPass /api/websocket ws://ip:8123/api/websocket
+  ProxyPassReverse /api/websocket ws://ip:8123/api/w$
+  ProxyPass / http://ip:8123/
+  ProxyPassReverse / http://ip:8123/
   RewriteEngine on
   RewriteCond %{HTTP:Upgrade} =websocket [NC]
-  RewriteRule /(.*)  ws://192.168.x.x:8123/$1 [P,L]
+  RewriteRule /(.*)  ws://ip:8123/$1 [P,L]
   RewriteCond %{HTTP:Upgrade} !=websocket [NC]
-  RewriteRule /(.*)  http://192.168.x.x:8123/$1 [P,L]
+  RewriteRule /(.*)  http://ip:8123/$1 [P,L]
 </VirtualHost>
