--- a/hass_apache.conf
+++ b/hass_apache.conf
@@ -3,17 +3,31 @@
     Redirect / https://#nome-dominio/
 </VirtualHost>
 
-<VirtualHost *:443>
-  ServerName #nome-dominio
-  ProxyPreserveHost On
-  ProxyRequests off
-  ProxyPass /api/websocket ws://ip:8123/api/websocket
-  ProxyPassReverse /api/websocket ws://ip:8123/api/w$
-  ProxyPass / http://ip:8123/
-  ProxyPassReverse / http://ip:8123/
-  RewriteEngine on
-  RewriteCond %{HTTP:Upgrade} =websocket [NC]
-  RewriteRule /(.*)  ws://ip:8123/$1 [P,L]
-  RewriteCond %{HTTP:Upgrade} !=websocket [NC]
-  RewriteRule /(.*)  http://ip:8123/$1 [P,L]
+<IfModule mod_ssl.c>
+    SSLStaplingCache        shmcb:/var/run/ocsp(128000)
+    <VirtualHost *:443>
+        ServerName #nome-dominio
+        Header always set Strict-Transport-Security "max-age=15552000; includeSubDomains; preload"
+        SSLEngine on
+        SSLProxyEngine on
+        SSLProxyVerify none
+        SSLProxyCheckPeerCN off
+        SSLProxyCheckPeerName off
+        SSLCipherSUite "ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256"
+        SSLProtocol TLSv1.2 TLSv1.3
+        SSLCompression off
+        SSLUseStapling          on
+        SSLStaplingResponderTimeout 5
+        SSLStaplingReturnResponderErrors off
+        ProxyRequests off
+        ProxyPreserveHost on
+        ProxyPass /api/websocket ws://ip:8123/api/websocket
+        ProxyPassReverse /api/websocket ws://ip:8123/api/w$
+        ProxyPass / http://ip:8123/
+        ProxyPassReverse / http://ip:8123/
+        RewriteEngine on
+        RewriteCond %{HTTP:Upgrade} =websocket [NC]
+        RewriteRule /(.*)  ws://ip:8123/$1 [P,L]
+        RewriteCond %{HTTP:Upgrade} !=websocket [NC]
+        RewriteRule /(.*)  http://ip:8123/$1 [P,L]
 </VirtualHost>
