--- a/hass_apache.conf
+++ b/hass_apache.conf
@@ -22,7 +22,7 @@
         ProxyRequests off
         ProxyPreserveHost on
         ProxyPass /api/websocket ws://ip:8123/api/websocket
-        ProxyPassReverse /api/websocket ws://ip:8123/api/w$
+        ProxyPassReverse /api/websocket ws://ip:8123/api/websocket
         ProxyPass / http://ip:8123/
         ProxyPassReverse / http://ip:8123/
         RewriteEngine on
