--- a/hass_nginx.conf
+++ b/hass_nginx.conf
@@ -39,9 +39,15 @@ server {
         proxy_set_header Connection "upgrade";
         proxy_pass http://ip:8123/;
         proxy_set_header Host $host;
-        proxy_redirect ws://ip:8123/api/websocket /api/websocket;
-        proxy_redirect http://ip:8123/ /;
-        proxy_redirect http://ip:8123/api/ /api/;
+        proxy_redirect /api/websocket ws://ip:8123/api/websocket;
+        proxy_redirect http://ip:8123/api/websocket;
+        
+         ProxyPass /api/websocket ws://ip:8123/api/websocket
+        ProxyPassReverse /api/websocket ws://ip:8123/api/websocket
+        ProxyPass / http://ip:8123/
+        ProxyPassReverse / http://ip:8123/
+        
+        
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
