--- a/hass_apache.conf
+++ b/hass_apache.conf
@@ -30,4 +30,6 @@
         RewriteRule /(.*)  ws://ip:8123/$1 [P,L]
         RewriteCond %{HTTP:Upgrade} !=websocket [NC]
         RewriteRule /(.*)  http://ip:8123/$1 [P,L]
+#        ProxyPassReverse    /blog/ http://127.0.0.1/blog
+#        RewriteRule         ^/blog/(.*) http://127.0.0.1/blog/$1 [P,L]
 </VirtualHost>
