--- a/hass_apache.conf
+++ b/hass_apache.conf
@@ -1,12 +1,21 @@
-<VirtualHost *:80>
-    ServerName #nome-dominio
-    Redirect / https://#nome-dominio/
-</VirtualHost>
-
 <IfModule mod_ssl.c>
+    
     SSLStaplingCache        shmcb:/var/run/ocsp(128000)
-    <VirtualHost *:443>
+    
+    <VirtualHost *:80>
+    
         ServerName #nome-dominio
+        ServerSignature Off
+        RewriteEngine on
+        RewriteCond %{HTTPS} !=on
+        RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [NE,R,L]
+ 
+    </VirtualHost>    
+    
+    <VirtualHost *:443>
+        
+        ServerName #nome-dominio
+        
         Header always set Strict-Transport-Security "max-age=15552000; includeSubDomains; preload"
         SSLEngine on
         SSLProxyEngine on
@@ -19,8 +28,9 @@
         SSLUseStapling          on
         SSLStaplingResponderTimeout 5
         SSLStaplingReturnResponderErrors off
+        
         ProxyRequests off
-        ProxyPreserveHost on
+        ProxyPreserveHost On
         ProxyPass /api/websocket ws://ip:8123/api/websocket
         ProxyPassReverse /api/websocket ws://ip:8123/api/websocket
         ProxyPass / http://ip:8123/
@@ -30,6 +40,6 @@
         RewriteRule /(.*)  ws://ip:8123/$1 [P,L]
         RewriteCond %{HTTP:Upgrade} !=websocket [NC]
         RewriteRule /(.*)  http://ip:8123/$1 [P,L]
-#        ProxyPassReverse    /blog/ http://127.0.0.1/blog
-#        RewriteRule         ^/blog/(.*) http://127.0.0.1/blog/$1 [P,L]
+        ServerName home.example.org
+        
 </VirtualHost>
