--- a/proxmox_apache.conf
+++ b/proxmox_apache.conf
@@ -5,7 +5,10 @@
     <VirtualHost *:80>
 
         ServerName #nome-dominio
-        Redirect / https://#nome-dominio/
+        ServerSignature Off
+        RewriteEngine on
+        RewriteCond %{HTTPS} !=on
+        RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [NE,R,L]
         
     </VirtualHost>
 
