--- a/proxmox_apache.conf
+++ b/proxmox_apache.conf
@@ -30,7 +30,7 @@
         SSLStaplingReturnResponderErrors off
         
         ProxyRequests off
-        ProxyPreserveHost on
+        ProxyPreserveHost On
         
         <Location />
         
