--- a/hass_nginx.conf
+++ b/hass_nginx.conf
@@ -1,17 +1,13 @@
-upstream hass {
-    server #mettere nome dominio;
-}
-
 map $http_upgrade $connection_upgrade {
-    ''                      'close';
-    default                 'upgrade';
+    default upgrade;
+    ''      close;
 }
     
 server {
-    listen [::]:80;
-    listen 80;
-    server_name #mettere nome dominio;
-    rewrite ^ https://$host$request_uri? permanent;
+    listen       80 default_server;
+    server_name  #mettere nome dominio;
+
+    return 301 https://$host$request_uri;
 
 }
 
@@ -42,7 +38,7 @@ server {
         proxy_redirect /api/websocket ws://ip:8123/api/websocket;
         proxy_redirect http://ip:8123/api/websocket;
         
-         ProxyPass /api/websocket ws://ip:8123/api/websocket
+        ProxyPass /api/websocket ws://ip:8123/api/websocket
         ProxyPassReverse /api/websocket ws://ip:8123/api/websocket
         ProxyPass / http://ip:8123/
         ProxyPassReverse / http://ip:8123/
@@ -53,9 +49,5 @@ server {
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout  3600s;
-        proxy_read_timeout  3600s;
-        proxy_send_timeout  3600s;
-        send_timeout  3600s;
     }
 }
