--- a/proxmox_nginx.conf
+++ b/proxmox_nginx.conf
@@ -1,11 +1,6 @@
 upstream proxmox {
     server "mettere nome dominio";
 }
-
-map $http_upgrade $connection_upgrade {
-    ''                      'close';
-    default                 'upgrade';
-}
  
 server {
     listen [::]:80;
@@ -31,18 +26,15 @@ server {
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always;
+    proxy_redirect off;
+
     location / {
-        rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_pass https://ip-proxmox:8006;
-        proxy_set_header Host $host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Real-IP $remote_addr;     
-        proxy_set_header X-Forwarded-Proto https;
+        proxy_pass https://ip_proxmox:8006;
+        proxy_buffering off;
+        client_max_body_size 0;
         proxy_connect_timeout  3600s;
         proxy_read_timeout  3600s;
         proxy_send_timeout  3600s;
