--- a/hass_nginx.conf
+++ b/hass_nginx.conf
@@ -29,25 +29,21 @@ server {
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; 
   
     location / {
-        rewrite /(.*) /$1 break;
+        proxy_pass http://ip-hassio:8123;
+        proxy_set_header Host $host;
+
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection "upgrade";
-        proxy_pass http://ip:8123/;
+    }
+    
+        location /api/websocket {
+        proxy_pass http://ip-hassio:8123/api/websocket;
         proxy_set_header Host $host;
-        proxy_redirect /api/websocket ws://ip:8123/api/websocket;
-        proxy_redirect http://ip:8123/api/websocket;
-        
-        ProxyPass /api/websocket ws://ip:8123/api/websocket
-        ProxyPassReverse /api/websocket ws://ip:8123/api/websocket
-        ProxyPass / http://ip:8123/
-        ProxyPassReverse / http://ip:8123/
-        
-        
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
+
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
     }
 }
