--- a/hass_apache.conf
+++ b/hass_apache.conf
@@ -41,4 +41,8 @@
         RewriteCond %{HTTP:Upgrade} !=websocket [NC]
         RewriteRule /(.*)  http://ip:8123/$1 [P,L]
         
-</VirtualHost>
+        SSLCertificateFile /etc/letsencrypt/live/<nome-dominio>/fullchain.pem
+        SSLCertificateKeyFile /etc/letsencrypt/live/<nome-dominio>/privkey.pem
+        Include /etc/letsencrypt/options-ssl-apache.conf
+    </VirtualHost>
+</IfModule>
