--- a/proxmox_apache.conf
+++ b/proxmox_apache.conf
@@ -57,7 +57,11 @@
             ProxyPass wss://192.168.x.x:8006/$1 retry=0
         
         </LocationMatch>
-
+        
+        SSLCertificateFile /etc/letsencrypt/live/<nome-dominio>/fullchain.pem
+        SSLCertificateKeyFile /etc/letsencrypt/live/<nome-dominio>/privkey.pem
+        Include /etc/letsencrypt/options-ssl-apache.conf
+    
     </VirtualHost>
 
 </IfModule>
