--- a/proxmox_apache.conf
+++ b/proxmox_apache.conf
@@ -57,10 +57,12 @@
             ProxyPass wss://192.168.x.x:8006/$1 retry=0
         
         </LocationMatch>
-        
-        SSLCertificateFile /etc/letsencrypt/live/<nome-dominio>/fullchain.pem
-        SSLCertificateKeyFile /etc/letsencrypt/live/<nome-dominio>/privkey.pem
-        Include /etc/letsencrypt/options-ssl-apache.conf
+
+# attivare dopo aver creato il certificato
+
+#        SSLCertificateFile /etc/letsencrypt/live/<nome-dominio>/fullchain.pem
+#        SSLCertificateKeyFile /etc/letsencrypt/live/<nome-dominio>/privkey.pem
+#        Include /etc/letsencrypt/options-ssl-apache.conf
     
     </VirtualHost>
 
