--- a/multi_sites.conf
+++ b/multi_sites.conf
@@ -16,8 +16,8 @@ server {
     listen [::]:443 ssl http2;
     listen      443 ssl http2;
     server_name #mettere nome dominio;
-    ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
+    #<eliminare dopo aver creato i certificati># ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
+    #<eliminare dopo aver creato i certificati># ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
