--- a/hass_core_nginx.conf
+++ b/hass_core_nginx.conf
@@ -33,7 +33,7 @@ server {
         rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
+        proxy_set_header Connection $connection_upgrade;
         proxy_pass http://ip:porta/;
         proxy_set_header Host $host;
         proxy_redirect http://ip:porta/ /;
