--- a/hass_nginx.conf
+++ b/hass_nginx.conf
@@ -1,22 +1,22 @@
 map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
+    ''                      'close';
+    default                 'upgrade';
 }
-    
+ 
 server {
-    listen       80 default_server;
-    server_name  #mettere nome dominio;
-
-    return 301 https://$host$request_uri;
-
+    listen [::]:80;
+    listen 80;
+    server_name #mettere nome dominio;
+    rewrite ^ https://$host$request_uri? permanent;
+    
 }
 
 server {
     listen [::]:443 ssl http2;
     listen      443 ssl http2;
     server_name #mettere nome dominio;
-    ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
+    #<eliminare dopo aver creato i certificati># ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
+    #<eliminare dopo aver creato i certificati># ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
@@ -27,23 +27,23 @@ server {
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; 
-  
-    location / {
-        proxy_pass http://ip-hassio:8123;
-        proxy_set_header Host $host;
-
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-    }
     
-        location /api/websocket {
-        proxy_pass http://ip-hassio:8123/api/websocket;
-        proxy_set_header Host $host;
-
+    location / {
+        rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-
+        proxy_set_header Connection $connection_upgrade;
+        proxy_pass http://ip:porta/;
+        proxy_set_header Host $host;
+        proxy_redirect http://ip:porta/ /;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Server $host;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_connect_timeout  3600s;
+        proxy_read_timeout  3600s;
+        proxy_send_timeout  3600s;
+        send_timeout  3600s;
     }
-}
+}    
