--- a/hass_core_nginx.conf
+++ b/hass_core_nginx.conf
@@ -47,7 +47,16 @@ server {
         proxy_send_timeout  3600s;
         send_timeout  3600s;
     }
-           
+      
+    location /api/websocket {
+        proxy_pass http://ip:porta/api/websocket;
+        proxy_set_header Host $host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+
+    }
+    
 #################################################################################
 # aggiungere per ogni destinazione che volete raggiungere con un solo indirizzo #
 #################################################################################
