--- a/hass_nginx.conf
+++ b/hass_nginx.conf
@@ -33,17 +33,13 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
-        proxy_pass http://ip:porta/;
+        proxy_pass http://ip:porta;
         proxy_set_header Host $host;
-        proxy_redirect http://ip:porta/ /;
+        proxy_redirect http://ip:porta /;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Server $host;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-Proto $scheme;
-        proxy_connect_timeout  3600s;
-        proxy_read_timeout  3600s;
-        proxy_send_timeout  3600s;
-        send_timeout  3600s;
     }
 }    
