--- a/hass_nginx.conf
+++ b/hass_nginx.conf
@@ -7,8 +7,7 @@ server {
     listen [::]:80;
     listen 80;
     server_name #mettere nome dominio;
-    rewrite ^ https://$host$request_uri? permanent;
-    
+    return 301 https://$host$request_uri;    
 }
 
 server {
@@ -27,12 +26,12 @@ server {
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; 
+    add_header X-Content-Type-Options "nosniff";
     
     location / {
-        rewrite /(.*) /$1 break;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection $connection_upgrade;
+        proxy_set_header Connection "upgrade";
         proxy_pass http://ip:porta;
         proxy_set_header Host $host;
         proxy_redirect http://ip:porta /;
