--- a/hass_nginx.conf
+++ b/hass_nginx.conf
@@ -1,44 +1,60 @@
+# La mappatura per l'upgrade del protocollo è corretta e utile per i WebSocket.
 map $http_upgrade $connection_upgrade {
-    ''                      'close';
-    default                 'upgrade';
-}
- 
-server {
-    listen [::]:80;
-    listen 80;
-    server_name #mettere nome dominio;
-    return 301 https://$host$request_uri;    
+    ''        'close';
+    default   'upgrade';
 }
 
+# Reindirizza il traffico da HTTP a HTTPS
 server {
+    listen 80;
+    listen [::]:80;
+    server_name homeassistant.tuodominio.it; # Sostituisci con il tuo dominio
+    return 301 https://$host$request_uri;
+}
+
+# Server principale per il traffico HTTPS
+server {
+    listen 443 ssl http2;
     listen [::]:443 ssl http2;
-    listen      443 ssl http2;
-    server_name #mettere nome dominio;
-    #<eliminare dopo aver creato i certificati># ssl_certificate /etc/letsencrypt/live/#mettere nome dominio/fullchain.pem;
-    #<eliminare dopo aver creato i certificati># ssl_certificate_key /etc/letsencrypt/live/#mettere nome dominio/privkey.pem;
+    server_name homeassistant.tuodominio.it; # Sostituisci con il tuo dominio
+
+    # Certificati Let's Encrypt
+    ssl_certificate /etc/letsencrypt/live/homeassistant.tuodominio.it/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/homeassistant.tuodominio.it/privkey.pem;
+
+    # Impostazioni di sicurezza SSL moderne e robuste
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+ECDSA+AESGCM:EECDH+aRSA+AESGCM:EECDH+ECDSA+SHA512:EECDH+ECDSA+SHA384:EECDH+ECDSA+SHA256:ECDH+AESGCM:ECDH+AES256:DH+AESGCM:DH+AES256:RSA+AESGCM:!aNUL$;
-    ssl_session_cache shared:TLS:2m;  
-    ssl_buffer_size 4k;
+    ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
+    ssl_ecdh_curve secp384r1;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_tickets off;
     ssl_stapling on;
     ssl_stapling_verify on;
+    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+    add_header X-Frame-Options "SAMEORIGIN";
+    add_header X-Content-Type-Options "nosniff";
+    add_header X-XSS-Protection "1; mode=block";
+    
+    # Resolver DNS per ssl_stapling
     resolver 8.8.8.8 8.8.4.4 valid=300s;
     resolver_timeout 5s;
-    add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload" always; 
-    add_header X-Content-Type-Options "nosniff";
-    
+
+    # Blocca directory non necessarie per ragioni di sicurezza
+    location ~ /\. {
+        deny all;
+    }
+
+    # Proxy per Home Assistant
     location / {
+        proxy_pass http://<IP_HOME_ASSISTANT>:<PORTA_HOME_ASSISTANT>;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection "upgrade";
-        proxy_pass http://ip:porta;
-        proxy_set_header Host $host;
-        proxy_redirect http://ip:porta /;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Server $host;
-        proxy_set_header X-Forwarded-Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header Connection $connection_upgrade;
+        proxy_redirect off;
     }
-}    
+}
